# PyVism3

./: NOTES.txt  README.md  pyproject.toml
docs/: index.md
docs/language_tour/: 01_variables.md  02_basic_dt.md  03_fn_call.md  basic_dt.md  branching.md  consts.md  fn_call.md  index.md  loops.md
docs/tech_details/: basic_dt.md  index.md
src/pyvism/: __main__.py  hooks.py
src/pyvism/compiler/: interface.py  orchestrator.py
src/pyvism/compiler/components/: database.py  diagnostic.py  parser.py  reporter.py  scanner.py  token.py
src/pyvism/toolkit/: __main__.py
