[project]
name = "PyVism"
description = "PyVism is a Python implementation of the semi-esoteric Vism programming language."
keywords = ["vism", "python", "assembly"]
version = "0.1.0"

requires-python = ">=3.11"

license = { file = "LICENSE" }
readme = "README.md"

authors = [{ name = "Qexat", email = "contact@qexat.com" }]
maintainers = [{ name = "Qexat", email = "contact@qexat.com" }]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
vism = "pyvism.__main__:main"
vtk = "pyvism.toolkit.__main__:main"
